--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,36 @@
 extends layout
-
 block content
-  h1= title
-  p Welcome to #{title}
-  p Now with 100% more Heroku support!
+    .jumbotron
+        .container
+            h1 Hello, world! And welcome to #{title}
+            p
+                | This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.
+            P
+                | Now with 100% more Heroku support and a dash of bootstrap.
+            p
+                a.btn.btn-primary.btn-lg(href='#', role='button') Learn more »
+
+    .container
+    
+        .row
+            .col-md-4
+                h2 You want some Latin?
+                p
+                    | Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+                p
+                    a.btn.btn-default(href='#', role='button') View details »
+            .col-md-4
+                h2 We've got some Latin
+                p
+                    | Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+                p
+                    a.btn.btn-default(href='#', role='button') View details »
+            .col-md-4
+                h2 Semper Ubi Sub Ubi
+                p
+                    | Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+                p
+                    a.btn.btn-default(href='#', role='button') View details »
+        hr
+        footer
+            p © Josh 2016
