--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,13 +1,30 @@
-doctype html
-html(lang='en')
-  head
-    meta(charset='UTF-8')
-    meta(name='viewport', content='width=device-width')
-    title= title
+extends ../node_modules/jade-bootstrap/_bootstrap
+// extends ../node_modules/jade-bootstrap/layouts/starter
+
+append styles
+    // Custom styles for this template
     block css
-      link(rel='stylesheet', href='/css/style.css')
+        link(href='../node_modules/jade-bootstrap/css/jumbotron.css', rel='stylesheet')
     block js
-      if ENV_DEVELOPMENT
-        script(src='http://localhost:35729/livereload.js')
-  body
+        if ENV_DEVELOPMENT
+            script(src='http://localhost:35729/livereload.js')
+
+append body
+    nav.navbar.navbar-inverse.navbar-fixed-top
+        .container
+            .navbar-header
+                button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
+                    span.sr-only Toggle navigation
+                    span.icon-bar
+                    span.icon-bar
+                    span.icon-bar
+                a.navbar-brand(href='#') Web Spikes
+            #navbar.navbar-collapse.collapse
+                form.navbar-form.navbar-right
+                    .form-group
+                        input.form-control(type='text', placeholder='Email')
+                    .form-group
+                        input.form-control(type='password', placeholder='Password')
+                    button.btn.btn-success(type='submit') Sign in
     block content
+    
