Adding a basic router that can return multiple types of pages.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,6 +21,7 @@ append body
                 a.navbar-brand(href='/Press') Press
                 a.navbar-brand(href='/Projects') Projects
                 a.navbar-brand(href='/Xena') Xena
+                a.navbar-brand(href='/About') About
             #navbar.navbar-collapse.collapse
                 form.navbar-form.navbar-right
                     .form-group
