--- a/views/projects.jade
+++ b/views/projects.jade
@@ -2,12 +2,10 @@ extends layout
 block content
     .jumbotron
         .container
-            h1 #{subtitle}
+            h1 Press
             p
                 | words
             P
                 | More words
             p
                 a.btn.btn-primary.btn-lg(href='/about', role='button') Learn more »
-
-
