--- a/views/xena.jade
+++ b/views/xena.jade
@@ -1,13 +1,13 @@
 extends layout
+extends layout
 block content
     .jumbotron
         .container
             h1 #{subtitle}
+            
             p
                 | words
             P
                 | More words
             p
                 a.btn.btn-primary.btn-lg(href='/about', role='button') Learn more »
-
-
