Updating project page

--- a/views/projects.jade
+++ b/views/projects.jade
@@ -2,7 +2,7 @@ extends layout
 block content
     .jumbotron
         .container
-            h1 Press
+            h1 #{subtitle}
             p
                 | words
             P
